--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,4 @@
-{"headers":[{"source":"/(.*)","headers":[{"key":"X-Frame-Options","value":"DENY"},{"key":"X-Content-Type-Options","value":"nosniff"}]}]}
+{
+  "trailingSlash": true,
+  "cleanUrls": true
+}
