Vercel rewrites für /blog/

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "cleanUrls": true,
   "trailingSlash": true,
-  "cleanUrls": true
+  "rewrites": [
+    { "source": "/blog", "destination": "/blog/index.html" },
+    { "source": "/blog/", "destination": "/blog/index.html" }
+  ]
 }
